git web hosting

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>처음엔 힘들지만 나중엔 더 힘들거야.</h1>
+    <h1 style ="color: aqua;">처음엔 힘들지만 나중엔 더 힘들거야.</h1>
+    <a href="que1.html">1번문제</a>
+    <a href="17_BabyShark.html">8번문제</a>
 </body>
 </html>
